--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <!-- endbuild -->
 
   </head>
@@ -34,7 +34,7 @@
         <section class="top-bar-section">
           <ul class="right">
             <li class="">
-              <a href="/#/about" class="">About</a>
+              <a href="/about" class="">About</a>
             </li>
           </ul>
         </section>
@@ -59,16 +59,13 @@
     <!-- endbuild -->
 
     <!-- build:js(.) /scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/json3/lib/json3.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <!-- endbower -->
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-touch/angular-touch.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/lodash/dist/lodash.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) /scripts/scripts.js -->
@@ -76,7 +73,6 @@
         <script src="/scripts/controllers/main.js"></script>
         <script src="/scripts/controllers/about.js"></script>
         <script src="/scripts/controllers/search.js"></script>
-        <script src="/scripts/services/models/eventmodel.js"></script>
         <script src="/scripts/services/api/search.js"></script>
         <!-- endbuild -->
 </body>
