--- a/app/index.html
+++ b/app/index.html
@@ -58,13 +58,17 @@
     <![endif]-->
     <!-- endbuild -->
 
-    <!-- build:js(.) /scripts/vendor.js -->
+    <!-- build:js(.) /scripts/bundle-angular.js -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
+    <!-- <script src="/bower_components/angular-i18n/angular-locale_zh-cn.js"></script> -->
+    <!-- endbuild -->
+
+    <!-- build:js(.) /scripts/vendor.js -->
     <script src="/bower_components/lodash/dist/lodash.js"></script>
     <!-- endbuild -->
 
