create a pagination directive

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="/scripts/controllers/about.js"></script>
         <script src="/scripts/controllers/search.js"></script>
         <script src="/scripts/services/api/search.js"></script>
+        <script src="scripts/directives/shpagination.js"></script>
         <!-- endbuild -->
 </body>
 </html>
