--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <nav class="top-bar docs-bar hide-for-small" data-topbar>
+    <div class="header contain-to-grid sticky">
+      <nav class="top-bar docs-bar hide-for-small" data-topbar role="navigation" data-options="">
         <ul class="title-area">
           <li class="name">
             <a href="/" class="logo" title="stubhub">StubHub</a>
@@ -33,8 +33,12 @@
 
         <section class="top-bar-section">
           <ul class="right">
-            <li class="">
-              <a href="/about" class="">About</a>
+            <li class="has-dropdown not-click">
+              <a href="/about">Language</a>
+              <ul class="dropdown">
+                <li><a href="/about">US</a></li>
+                <li><a href="/about">ZH</a></li>
+              </ul>
             </li>
           </ul>
         </section>
@@ -59,6 +63,7 @@
     <!-- endbuild -->
 
     <!-- build:js(.) /scripts/bundle-angular.js -->
+    <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -70,6 +75,7 @@
 
     <!-- build:js(.) /scripts/vendor.js -->
     <script src="/bower_components/lodash/dist/lodash.js"></script>
+    <script src="/bower_components/foundation/js/foundation.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) /scripts/scripts.js -->
@@ -78,7 +84,7 @@
         <script src="/scripts/controllers/about.js"></script>
         <script src="/scripts/controllers/search.js"></script>
         <script src="/scripts/services/api/search.js"></script>
-        <script src="scripts/directives/shpagination.js"></script>
+        <script src="/scripts/directives/shpagination.js"></script>
         <!-- endbuild -->
 </body>
 </html>
