--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="/scripts/controllers/search.js"></script>
         <script src="/scripts/services/api/search.js"></script>
         <script src="/scripts/directives/shpagination.js"></script>
+        <script src="scripts/services/constantservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
