--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header contain-to-grid sticky">
+    <div class="header contain-to-grid sticky" ng-controller="NavCtrl">
       <nav class="top-bar docs-bar hide-for-small" data-topbar role="navigation" data-options="">
         <ul class="title-area">
           <li class="name">
@@ -36,8 +36,9 @@
             <li class="has-dropdown not-click">
               <a href="/about">Language</a>
               <ul class="dropdown">
-                <li><a href="/about">US</a></li>
-                <li><a href="/about">ZH</a></li>
+                <li ng-repeat="l in langs">
+                  <a ng-href="{{l.url}}">{{l.name}}</a>
+                </li>
               </ul>
             </li>
           </ul>
@@ -70,8 +71,12 @@
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
-    <!-- <script src="/bower_components/angular-i18n/angular-locale_zh-cn.js"></script> -->
     <!-- endbuild -->
+
+    <!--
+    Dynamic add i18n library.
+    <script src="/bower_components/angular-i18n/angular-locale_zh-cn.js"></script>
+    -->
 
     <!-- build:js(.) /scripts/vendor.js -->
     <script src="/bower_components/lodash/dist/lodash.js"></script>
@@ -85,7 +90,8 @@
         <script src="/scripts/controllers/search.js"></script>
         <script src="/scripts/services/api/search.js"></script>
         <script src="/scripts/directives/shpagination.js"></script>
-        <script src="scripts/services/constantservice.js"></script>
+        <script src="/scripts/services/constantservice.js"></script>
+        <script src="/scripts/controllers/nav.js"></script>
         <!-- endbuild -->
 </body>
 </html>
