--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
               <a href="/about">Language</a>
               <ul class="dropdown">
                 <li ng-repeat="l in langs">
-                  <a ng-href="{{l.url}}">{{l.name}}</a>
+                  <a ng-click="switchLang(l.value)">{{l.name}}</a>
                 </li>
               </ul>
             </li>
@@ -63,14 +63,20 @@
     <![endif]-->
     <!-- endbuild -->
 
-    <!-- build:js(.) /scripts/bundle-angular.js -->
+    <!-- build:js(.) /scripts/vendor.js -->
     <script src="/bower_components/jquery/jquery.js"></script>
+    <script src="/bower_components/lodash/dist/lodash.js"></script>
+    <script src="/bower_components/foundation/js/foundation.js"></script>
+    <!-- endbuild -->
+
+    <!-- build:js(.) /scripts/bundle-angular.js -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-local-storage/angular-local-storage.js"></script>
     <!-- endbuild -->
 
     <!--
@@ -78,12 +84,8 @@
     <script src="/bower_components/angular-i18n/angular-locale_zh-cn.js"></script>
     -->
 
-    <!-- build:js(.) /scripts/vendor.js -->
-    <script src="/bower_components/lodash/dist/lodash.js"></script>
-    <script src="/bower_components/foundation/js/foundation.js"></script>
-    <!-- endbuild -->
-
         <!-- build:js({.tmp,app}) /scripts/scripts.js -->
+        <script src="/scripts/stubhub.js"></script>
         <script src="/scripts/app.js"></script>
         <script src="/scripts/controllers/main.js"></script>
         <script src="/scripts/controllers/about.js"></script>
