--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/lodash/dist/lodash.js"></script>
     <script src="/bower_components/foundation/js/foundation.js"></script>
+    <script src="/bower_components/messageformat/messageformat.js"></script> <!-- for angular-translate -->
     <!-- endbuild -->
 
     <!-- build:js(.) /scripts/bundle-angular.js -->
@@ -79,6 +80,8 @@
     <script src="/bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="/bower_components/angular-translate/angular-translate.js"></script>
     <script src="/bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="/bower_components/angular-translate-interpolation-messageformat/angular-translate-interpolation-messageformat.js"></script>
+
     <!-- endbuild -->
 
     <!--
