a little enhancement of pluralization.

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,8 @@
     <script src="/bower_components/lodash/dist/lodash.js"></script>
     <script src="/bower_components/foundation/js/foundation.js"></script>
     <script src="/bower_components/messageformat/messageformat.js"></script> <!-- for angular-translate -->
+    <script src="/bower_components/messageformat/locale/zh.js"></script>
+    <script src="/bower_components/messageformat/locale/de.js"></script>
     <!-- endbuild -->
 
     <!-- build:js(.) /scripts/bundle-angular.js -->
