--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
       <div class="row main-view" ng-view=""></div>
 
       <div class="footer">
-        <p class="copyright">© 2004–2014 StubHub All rights reserved.</p>
+        <p class="copyright">© 2014 Haisheng Wu All rights reserved.</p>
       </div>
 
     </div>
