--- a/app/index.html
+++ b/app/index.html
@@ -98,9 +98,11 @@
         <script src="/scripts/controllers/about.js"></script>
         <script src="/scripts/controllers/search.js"></script>
         <script src="/scripts/services/api/search.js"></script>
+        <script src="/scripts/services/api/event.js"></script>
         <script src="/scripts/directives/shpagination.js"></script>
         <script src="/scripts/services/constantservice.js"></script>
         <script src="/scripts/controllers/nav.js"></script>
+        <script src="/scripts/controllers/event.js"></script>
         <!-- endbuild -->
 </body>
 </html>
