--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         <section class="top-bar-section">
           <ul class="right">
             <li class="has-dropdown not-click">
-              <a href="/about">{{ 'nav_language' | translate }}</a>
+              <a href="">{{ 'nav_language' | translate }}</a>
               <ul class="dropdown">
                 <li ng-repeat="l in langs">
                   <a ng-click="switchLang(l.value)">{{l.name}}</a>
