--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,11 @@
         </ul>
 
         <section class="top-bar-section">
+          <ul>
+            <li ng-repeat="p in performers">
+              <a ng-href="{{p.url}}">{{ p.nameKey | translate}}</a>
+            </li>
+          </ul>
           <ul class="right">
             <li class="has-dropdown not-click">
               <a href="">{{ 'nav_language' | translate }}</a>
@@ -103,6 +108,7 @@
         <script src="/scripts/services/constantservice.js"></script>
         <script src="/scripts/controllers/nav.js"></script>
         <script src="/scripts/controllers/event.js"></script>
+        <script src="/scripts/controllers/performer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
