--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,8 @@
 
         <section class="top-bar-section">
           <ul>
-            <li ng-repeat="p in performers">
-              <a ng-href="{{p.url}}">{{ p.nameKey | translate}}</a>
+            <li ng-repeat="c in category">
+              <a ng-href="{{c.url}}">{{ c.nameKey | translate}}</a>
             </li>
           </ul>
           <ul class="right">
@@ -108,7 +108,7 @@
         <script src="/scripts/services/constantservice.js"></script>
         <script src="/scripts/controllers/nav.js"></script>
         <script src="/scripts/controllers/event.js"></script>
-        <script src="/scripts/controllers/performer.js"></script>
+        <script src="/scripts/controllers/category.js"></script>
         <!-- endbuild -->
 </body>
 </html>
