--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>StubHub</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta name="fragment" content="!">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <link rel="stylesheet" href="/bower_components/foundation/css/normalize.css">
